docs: update README with Java 17 run flags for running Presto in IntelliJ
Add `-Djdk.attach.allowAttachSelf=true` to enable self-attach in Java 17,
which is required for certain debugging and monitoring tools during local
Presto development. Also include the necessary `--add-opens` flags to allow
access to internal JDK APIs that Presto depends on.